--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "lucide-react": "^0.359.0",
     "next": "14.2.21",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.5",
     "ra-data-simple-rest": "^4.16.20",
     "react": "^18.3.1",
     "react-admin": "^4.16.20",
